--- a/templates/services.html
+++ b/templates/services.html
@@ -3,44 +3,39 @@
 
 <div class="__hero"></div>
 
-{% comment %} about section {% endcomment %}
-<div class="about__section container">
-  <div class="about">
-    <div class="about__image">
-      <img src={% static "images/about-us-2.jpg" %} alt="">
+<!-- what we offer  -->
+
+<div class="WOF__section container">
+  <div class="WOF">
+    <div class="WOF__image">
+      <img src={% static "images/v1(i).jpg" %} alt="">
     </div>
-    <div class="about__text">
-      <h2>About Us</h2>
+    <div class="WOFt__text">
+      <h2>What we Offer</h2>
       <div class="">
         <p class="WOF_text__content">
-          Smart Climate Advisor is dedicated to empowering Tanzanian farmers
-          with accurate and actionable climate predictions, helping them
-          navigate the complexities of an ever-changing environment. By
-          providing timely and reliable weather forecasts, we enable farmers to
-          make informed decisions that enhance crop yields, reduce risks, and
-          improve overall agricultural productivity. Our approach is rooted in a
-          deep understanding of local conditions, allowing us to offer tailored
-          solutions that address the specific challenges faced by farmers in
-          different regions of Tanzania.
+          Smart Climate Advisor offers a comprehensive suite of climate
+          prediction services tailored to meet the needs of Tanzanian farmers,
+          who face significant challenges from drought and floods. By providing
+          accurate, real-time weather updates and long-term seasonal climate
+          forecasts, we help farmers plan their activities more effectively,
+          reducing the risks associated with unpredictable weather patterns.
         </p>
 
-        <p class="about_text__content">
-          Our commitment extends beyond just providing data; we are passionate
-          about driving positive change in the agricultural sector. We believe
-          that by equipping farmers with the right tools and knowledge, we can
-          contribute to food security, economic stability, and sustainable
-          farming practices. Through continuous innovation and collaboration
-          with local communities, we aim to create a platform that not only
-          supports farmers in their daily operations but also builds resilience
-          against the increasing threats of climate change.
+        <p class="WOF_text__content">
+          In addition to weather forecasts, our platform offers expert
+          agricultural advisories, guiding farmers on optimal crop choices,
+          planting schedules, and resource management. One of the core features
+          of our service is the early warning system for extreme weather events,
+          particularly droughts and floods. These alerts enable farmers to take
+          proactive measures to safeguard their crops and livestock, ensuring
+          better resilience against adverse conditions.
         </p>
-        <p class="about_text__content">
-          We are more than just a service provider; we are a partner in the
-          journey towards a more sustainable and prosperous future for Tanzanian
-          agriculture. Our goal is to make climate-smart farming accessible to
-          all, ensuring that every farmer, regardless of their size or
-          resources, has the opportunity to thrive. Together, we can cultivate a
-          brig...
+        <p class="WOF_text__content">
+          Through these services, we aim to empower Tanzanian farmers to adapt
+          to the increasing challenges posed by climate change, helping them to
+          maintain and even improve their livelihoods despite environmental
+          uncertainti...
         </p>
       </div>
       <button class="cta-btn">
@@ -58,6 +53,55 @@
     Smart Climate <br />
     Advisors
   </h1>
+</div>
+
+<div class="numbers">
+  <div>
+    <h1>40k+</h1>
+    <p>Users</p>
+  </div>
+  <div>
+    <h1>200+</h1>
+    <p>
+      Accurate <br />
+      Predictions
+    </p>
+  </div>
+  <div>
+    <h1>112+</h1>
+    <p>
+      Professional <br />
+      team
+    </p>
+  </div>
+  <div>
+    <h1>20</h1>
+    <p>
+      Community <br />
+      Engagement
+    </p>
+  </div>
+</div>
+<!-- why choose us  -->
+
+<div class="WCU__section container">
+  <div class="WCU">
+    <div class="WCU__image">
+      <img src={% static "images/rectangle 31.png" %} alt="">
+    </div>
+    <div class="WCU__text">
+      <h2>Why you Should Choose Our Service</h2>
+      <ul>
+        <li>Localized Experts</li>
+        <li>Accurate and Timely Information</li>
+        <li>Proactive Risk Management</li>
+        <li>Comprehensive Support</li>
+        <li>Proven Success</li>
+        <li>Easy Accessibility</li>
+        <li>Affordable and Flexible Plan</li>
+      </ul>
+    </div>
+  </div>
 </div>
 
 <!-- testimonies  -->
@@ -168,45 +212,4 @@
   </div>
 </div>
 
-<!-- what we offer  -->
-
-<div class="WOF__section container">
-  <div class="WOF">
-    <div class="WOF__image">
-      <img src={% static "images/v1(i).jpg" %} alt="">
-    </div>
-    <div class="WOFt__text">
-      <h2>What we Offer</h2>
-      <div class="">
-        <p class="WOF_text__content">
-          Smart Climate Advisor offers a comprehensive suite of climate
-          prediction services tailored to meet the needs of Tanzanian farmers,
-          who face significant challenges from drought and floods. By providing
-          accurate, real-time weather updates and long-term seasonal climate
-          forecasts, we help farmers plan their activities more effectively,
-          reducing the risks associated with unpredictable weather patterns.
-        </p>
-
-        <p class="WOF_text__content">
-          In addition to weather forecasts, our platform offers expert
-          agricultural advisories, guiding farmers on optimal crop choices,
-          planting schedules, and resource management. One of the core features
-          of our service is the early warning system for extreme weather events,
-          particularly droughts and floods. These alerts enable farmers to take
-          proactive measures to safeguard their crops and livestock, ensuring
-          better resilience against adverse conditions.
-        </p>
-        <p class="WOF_text__content">
-          Through these services, we aim to empower Tanzanian farmers to adapt
-          to the increasing challenges posed by climate change, helping them to
-          maintain and even improve their livelihoods despite environmental
-          uncertainti...
-        </p>
-      </div>
-      <button class="cta-btn">
-        <a href="#" class="">Learn More</a>
-      </button>
-    </div>
-  </div>
-</div>
 {% endblock %}
