--- a/static/css/style.css
+++ b/static/css/style.css
@@ -688,3 +688,38 @@ aside div a {
   font-size: 2.5rem;
   margin-bottom: 0.4rem;
 }
+
+.contact__section {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+.contact {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  margin: 0 8%;
+}
+
+.contact__image {
+  width: 90%;
+}
+
+.contact__image img {
+  width: 100%;
+  border-radius: 2% 20%;
+}
+
+.contact__text h2 {
+  font-size: 3em;
+  padding: 1.5rem 0;
+  text-transform: uppercase;
+}
+
+.contact_text__content {
+  padding: 8px 0;
+  line-height: 1.6;
+}
